added calculation of what our carbon footprint could have been, without debugging and developement runs

--- a/carbonFootprintResults.ipynb
+++ b/carbonFootprintResults.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "id": "edc67d1b",
    "metadata": {},
    "outputs": [
@@ -27,7 +27,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "id": "9911559d",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "id": "24e41da9",
    "metadata": {},
    "outputs": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "id": "6fda2842",
    "metadata": {},
    "outputs": [
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "id": "de1c2a43",
    "metadata": {},
    "outputs": [],
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "id": "028e002d",
    "metadata": {},
    "outputs": [
@@ -627,7 +627,7 @@
        "1   train   493.859054      4.594039"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "id": "5a6ab1b0",
    "metadata": {},
    "outputs": [
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "id": "abce1b1a",
    "metadata": {},
    "outputs": [],
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "id": "6c44a399",
    "metadata": {},
    "outputs": [],
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "id": "10bd5d9f",
    "metadata": {},
    "outputs": [
@@ -837,7 +837,7 @@
        "4   thyroid_frz_true           1.583               0.015"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 11,
    "id": "dbd7bb0d",
    "metadata": {},
    "outputs": [
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 12,
    "id": "c042bb1c",
    "metadata": {},
    "outputs": [],
@@ -903,7 +903,10 @@
     "siim = pd.concat([ptrain_1,train_1])\n",
     "\n",
     "# Add a column for the number of times we ran each stage of training\n",
-    "siim[\"times_we_ran\"] = [6,1,1,1,1,1,2,2,2,1,1,1,1,1]\n",
+    "#siim[\"times_we_ran\"] = [6,1,1,1,1,1,2,2,2,1,1,1,1,1]\n",
+    "\n",
+    "# Running everything once\n",
+    "siim[\"times_we_ran\"] = [1,1,1,1,1,1,1,1,1,1,1,1,1,1]\n",
     "\n",
     "siim[\"our_co2\"] = siim[\"CO2eq(g)\"] * siim[\"times_we_ran\"]\n",
     "siim[\"our_distance\"] = siim[\"distance(km)\"] * siim[\"times_we_ran\"]\n",
@@ -914,13 +917,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 13,
    "id": "0ed147ae",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add a column for the number of times we ran each stage of training\n",
-    "rt_calculated[\"times_we_ran\"] = [1,1,1,1,5,1,2,1,1,1]\n",
+    "#rt_calculated[\"times_we_ran\"] = [1,1,1,1,5,1,2,1,1,1]\n",
+    "\n",
+    "# running everything once\n",
+    "rt_calculated[\"times_we_ran\"] = [1,1,1,1,1,1,1,1,1,1]\n",
+    "\n",
     "rt_calculated[\"our_co2\"] = rt_calculated[\"total_CO2eq(g)\"] * rt_calculated[\"times_we_ran\"]\n",
     "rt_calculated[\"our_distance\"] = rt_calculated[\"total_distance(km)\"] * rt_calculated[\"times_we_ran\"]\n",
     "rt_calculated = rt_calculated.rename(columns={\"dataset\":\"training_file\"})\n",
@@ -931,218 +938,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 14,
    "id": "b0fd8590",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>training_file</th>\n",
-       "      <th>our_co2</th>\n",
-       "      <th>our_distance</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>cait_pretraining</td>\n",
-       "      <td>1797.606132</td>\n",
-       "      <td>16.721916</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>f1_pretraining</td>\n",
-       "      <td>218.651446</td>\n",
-       "      <td>2.033967</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>f3_pretraining</td>\n",
-       "      <td>229.189462</td>\n",
-       "      <td>2.131995</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>l1_pretraining</td>\n",
-       "      <td>167.122448</td>\n",
-       "      <td>1.554627</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>l1b_pretraining</td>\n",
-       "      <td>69.744261</td>\n",
-       "      <td>0.648784</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>l2_pretraining</td>\n",
-       "      <td>113.056541</td>\n",
-       "      <td>1.051689</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>n_cf2_pretraining</td>\n",
-       "      <td>142.123526</td>\n",
-       "      <td>1.322080</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>n_cf11</td>\n",
-       "      <td>19.041446</td>\n",
-       "      <td>0.177130</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>n_cf11_1</td>\n",
-       "      <td>51.493972</td>\n",
-       "      <td>0.479014</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>n_cf11_9</td>\n",
-       "      <td>10.865354</td>\n",
-       "      <td>0.101073</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>n_cf11_10</td>\n",
-       "      <td>8.607216</td>\n",
-       "      <td>0.080067</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>n_cf11_6</td>\n",
-       "      <td>19.907256</td>\n",
-       "      <td>0.185184</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>n_cf11_7</td>\n",
-       "      <td>11.972152</td>\n",
-       "      <td>0.111369</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>n_cf11_rot1</td>\n",
-       "      <td>6.787123</td>\n",
-       "      <td>0.063136</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>isic_frz_false</td>\n",
-       "      <td>120.219000</td>\n",
-       "      <td>1.118000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>breast_frz_false</td>\n",
-       "      <td>12.572000</td>\n",
-       "      <td>0.117000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>chest_frz_false</td>\n",
-       "      <td>36.428000</td>\n",
-       "      <td>0.339000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>knee_frz_false</td>\n",
-       "      <td>18.384000</td>\n",
-       "      <td>0.171000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>thyroid_frz_false</td>\n",
-       "      <td>8.745000</td>\n",
-       "      <td>0.080000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>isic_frz_true</td>\n",
-       "      <td>7.601000</td>\n",
-       "      <td>0.071000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>breast_frz_true</td>\n",
-       "      <td>10.108000</td>\n",
-       "      <td>0.094000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>chest_frz_true</td>\n",
-       "      <td>13.117000</td>\n",
-       "      <td>0.122000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>knee_frz_true</td>\n",
-       "      <td>4.784000</td>\n",
-       "      <td>0.045000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>thyroid_frz_true</td>\n",
-       "      <td>1.583000</td>\n",
-       "      <td>0.015000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       training_file      our_co2  our_distance\n",
-       "0   cait_pretraining  1797.606132     16.721916\n",
-       "1     f1_pretraining   218.651446      2.033967\n",
-       "2     f3_pretraining   229.189462      2.131995\n",
-       "3     l1_pretraining   167.122448      1.554627\n",
-       "4    l1b_pretraining    69.744261      0.648784\n",
-       "5     l2_pretraining   113.056541      1.051689\n",
-       "6  n_cf2_pretraining   142.123526      1.322080\n",
-       "0             n_cf11    19.041446      0.177130\n",
-       "1           n_cf11_1    51.493972      0.479014\n",
-       "2           n_cf11_9    10.865354      0.101073\n",
-       "3          n_cf11_10     8.607216      0.080067\n",
-       "4           n_cf11_6    19.907256      0.185184\n",
-       "5           n_cf11_7    11.972152      0.111369\n",
-       "6        n_cf11_rot1     6.787123      0.063136\n",
-       "0     isic_frz_false   120.219000      1.118000\n",
-       "1   breast_frz_false    12.572000      0.117000\n",
-       "2    chest_frz_false    36.428000      0.339000\n",
-       "3     knee_frz_false    18.384000      0.171000\n",
-       "4  thyroid_frz_false     8.745000      0.080000\n",
-       "0      isic_frz_true     7.601000      0.071000\n",
-       "1    breast_frz_true    10.108000      0.094000\n",
-       "2     chest_frz_true    13.117000      0.122000\n",
-       "3      knee_frz_true     4.784000      0.045000\n",
-       "4   thyroid_frz_true     1.583000      0.015000"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "combined_df = pd.concat([siim, rt_calculated])\n",
     "our_total_co2 = combined_df[\"our_co2\"].sum()"
@@ -1150,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 15,
    "id": "eea7d0bd",
    "metadata": {},
    "outputs": [
@@ -1158,8 +957,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Our total estimated CO2 emissions is 3100.0g\n",
-      "This is equivalent to 29.0km travelled by car\n"
+      "Our total estimated CO2 emissions is 1483.0g\n",
+      "This is equivalent to 14.0km travelled by car\n"
      ]
     }
    ],
